# new-extensions-template

./: CargoLambda.toml  README.md
.github/workflows/: test.yml
template/: Cargo.toml  README.md
template/src/: logs_extension.rs  main.rs
