[package]
name = "{{ project_name }}"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda-extension = "{{ lambda_extension_version | default: "0.11.0" }}"
serde = "1"
tokio = { version = "1", features = ["macros"] }

{%- if binary_name %}
[[bin]]
name = "{{ binary_name }}"
path = "src/main.rs"
test = false
{%- endif %}
